--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,5 +2,6 @@
 <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
-         android:background="@color/colorAccent">
+         android:background="@color/colorAccent"
+        android:navigationIcon="@drawable/image">
 </Toolbar>
